force-app/main/default/objects/Annual_Spend_Threshold__c/Annual_Spend_Threshold__c.object-meta.xml
<CustomObject>
    <label>Annual Spend Threshold</label>
    <nameField>
        <label>Annual Spend Threshold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annual Spend Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>