force-app/main/default/objects/Annual_Spend_Threshold__c/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <label>Commercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>