force-app/main/default/objects/Annual_Spend_Threshold__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <label>Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>