force-app/main/default/objects/Annual_Spend_Threshold__c/fields/Exec_Other__c.field-meta.xml
<CustomField>
    <fullName>Exec_Other__c</fullName>
    <label>Exec Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>