force-app/main/default/objects/Annual_Spend_Threshold__c/fields/Executive__c.field-meta.xml
<CustomField>
    <fullName>Executive__c</fullName>
    <label>Executive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>