force-app/main/default/objects/Annual_Spend_Threshold__c/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <label>In Progress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>