force-app/main/default/objects/Annual_Spend_Threshold__c/fields/MSL__c.field-meta.xml
<CustomField>
    <fullName>MSL__c</fullName>
    <label>MSL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>