force-app/main/default/objects/Annual_Spend_Threshold__c/fields/Nominations__c.field-meta.xml
<CustomField>
    <fullName>Nominations__c</fullName>
    <label>Nominations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>