force-app/main/default/objects/Annual_Spend_Threshold__c/fields/TL_Liaison__c.field-meta.xml
<CustomField>
    <fullName>TL_Liaison__c</fullName>
    <label>TL Liaison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>