force-app/main/default/objects/Annual_Spend_Threshold__c/fields/TL_Rejected__c.field-meta.xml
<CustomField>
    <fullName>TL_Rejected__c</fullName>
    <label>TL Rejected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>